# ankiconnect-mcp

./: Cargo.toml  README.md  test_input.txt  test_server.py
src/: lib.rs  main.rs
src/protocol/: errors.rs  messages.rs  mod.rs
src/server/: anki_tools.rs  capabilities.rs  mod.rs  resources.rs  tools.rs
src/transport/: mod.rs  stdio.rs
